--- a/EventosCancun/EventosCancun.Mobile/index.html
+++ b/EventosCancun/EventosCancun.Mobile/index.html
@@ -8,12 +8,30 @@
     <link href="css/index.css" rel="stylesheet" />
 </head>
 <body>
-    <p>Hello, your application is ready!</p>
+    <div id="Eventos" style="border-style: solid;">
+        <div>
+            <img href=""></img>
+        </div>
+        <div>
+            <span>nombre evento</span>
+        </div>
+        <div>
+            <span>fecha evento</span>
+        </div>
+
+        <div>
+        </div>
+    </div>
 
     <!-- Cordova reference, this is added to your app when it's built. -->
     <script src="cordova.js"></script>
     <script src="scripts/platformOverrides.js"></script>
-
+    <script src="scripts/jquery-1.10.2.min.js"></script>
+    <script src="scripts/underscore.min.js"></script>
+    <script src="scripts/EventosCancun.js"></script>
     <script src="scripts/index.js"></script>
+    <script>
+        EventosCancun.Eventos.Start();
+    </script>
 </body>
 </html>
